# xiaobao

tivs-audio.git/: .gitmodules  CMakeLists.txt  README.md
tivs-audio.git/doc/: AudioServer.conf  audio.conf  xiami.conf  前端接口设计.md  喜马拉雅.doc  喜马拉雅配置项说明.md  数据库说明.md  管理接口设计.md
tivs-audio.git/include/tivs/audio/: AudioServiceConfig.proto  AudioServiceImpl.h  audio.proto  audio_service.proto
tivs-audio.git/src/: CMakeLists.txt
tivs-audio.git/src/tivs/audio/: AudioServer.cpp  AudioServiceImpl.cpp
tivs-audio.git/xiami/: xiami_http.py
tivs-audio.git/ximalaya/: audio_search.py  config.py  update_album.py  xiami.py  ximalaya.py
tsd-cardvr.git/: .project  AndroidManifest.xml  lint.xml  release_notes.txt
tsd-common.git/: .gitignore  .project  AndroidManifest.xml  project.properties
tsd-common.git/jni/: Android.mk  interface_jni.c
tsd-common.git/test/: .project  AndroidManifest.xml
tsd-common.git/tsd-commonTest/: .classpath  .project  AndroidManifest.xml
tsd-launcher.git/: .project  AndroidManifest.xml  release_notes.txt
tsd-launcher.git/test/: .classpath  .project  AndroidManifest.xml
tsd-music.git/: .project  AndroidManifest.xml  release_notes.txt
tsd-navigation.git/: .project  AndroidManifest.xml  release_notes.txt
tsd-news.git/: .project  AndroidManifest.xml  release_notes.txt
tsd-podcast.git/: .project  AndroidManifest.xml  release_notes.txt
tsd-settings.git/: .project  AndroidManifest.xml  project.properties  release_notes.txt
tsd-update.git/: .project  AndroidManifest.xml  release_notes.txt
tsd-voiceassistant.git/: .project  AndroidManifest.xml  project.properties  release_notes.txt
(+584 files in other folders)
